testsuite/tests/splice-imports/SI16.stderr
SI16.hs:10:7: error: [GHC-28914]
    • Level error: ‘x’ is used at level 1 but it is bound at level 0
    • In the Template Haskell quotation: 'x

