testsuite/tests/splice-imports/SI16.hs
{-# LANGUAGE TemplateHaskellQuotes #-}
{-# LANGUAGE NoImplicitStagePersistence #-}
module SI16 where

x = ()

foo = 'x


